# Chess-Game-Project

./: CMakeLists.txt  GamePlay.h  Pieces.cpp  README.md  Saves.cpp  TestsEX2.cpp  TestsEX2.h
31_ex2_305769440/: BOARD MAP.docx  Board.cpp  Board.h  ChessPGM.cpp  ChessPGM.h  GamePlay.cpp  Pieces.h  READ ME.txt
